--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,5 @@ html, body, canvas, div
 	padding: 0;
 	text-decoration: none;	
 	word-wrap: break-word;
+	background-image: url('../images/mainbg.jpg');
 }
